<resources>
    <string name="app_name">MovieDb</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="title">Title</string>
    <string name="poster">Poster of Movie</string>
    <string name="description_title">Description</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Feugiat vivamus at augue eget arcu dictum varius duis.</string>
    <string name="vote_average">6.6</string>
    <string name="release_date_title">Release Date</string>
    <string name="release_date">10–03–2020</string>
    <string name="review">Review</string>
    <string name="review_empty">Review is empty</string>
    <string name="home_title">Movie</string>
    <string name="detail_title">Detail</string>
    <string name="favorite_title">Favorite</string>
    <string name="share_title">Share</string>
    <string name="icon">Icon</string>
    <string name="add_fav">Added to Favorites</string>
    <string name="remove_fav">Removed from Favorites</string>
    <string name="empty">lets add your favorite movie</string>
    <string name="title_bottom_sheet">please click the button to share the movie</string>
    <string name="share_text">please visit the following link for more info: %s</string>
</resources>