<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_title"
            style="@style/tv_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/card_view"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_detail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="6dp"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_detail">

            <TextView
                android:id="@+id/tv_rate"
                style="@style/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_gravity="center"
                android:text="@string/vote_average"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_star"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_release_date_title"
            style="@style/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/release_date_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:text="@string/release_date"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/description_title"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_overview"
            style="@style/tv_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/card_view" />

        <TextView
            android:id="@+id/tv_review_title"
            style="@style/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/review"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            app:layout_constraintStart_toStartOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_review"
            style="@style/tv_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/tv_review_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_review_empty"
            style="@style/tv_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:visibility="invisible"
            android:text="@string/review_empty"
            app:layout_constraintTop_toBottomOf="@id/tv_review_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
